--- a/bookshelf/src/assets/styles/underConstruction/underConstruction.css
+++ b/bookshelf/src/assets/styles/underConstruction/underConstruction.css
@@ -1,5 +1,5 @@
 #underConstruction {
-    background-image: url(../images/underConstruction.jpg);
+    background-image: url(../../images/underConstruction.jpg);
     width: "100%";
     height: 100vh;
     background-size: contain;
